--- a/thesis.tex
+++ b/thesis.tex
@@ -102,9 +102,15 @@
 
 	% Abstract (recommended length around 80-200 words; this is not a copy of your thesis assignment!)
 	\def\Abstract{%
-		In this thesis, I describe the notions needed for understanding and proving the pole-shifting theorem, as well as the theorem itself. I do this by frist defining first order dynamical linear systems with constant coefficients with control and defining controllability of such a system. 
+		In this thesis, I describe the notions needed for understanding and proving the pole shifting theorem, as well as the theorem itself. 
+		%I do this by frist defining first order dynamical linear systems with constant coefficients with control and defining controllability of such a system. 
+		I do this by frist defining first order dynamical linear systems with constant coefficients with control and defining controllability and stability of such a system. By looking at the stability of the system I demonstrate that characteristic polynomials of the coefficient matrix representing the system is a valuable indicator of the system's behaviour.
 		Then I show that the definition of controllability motivated by discrete-time systems also holds for continuous-time systems.
-		Using these notions, the pole-shifting theorem can be formulated and proved.
+		Using these notions, the pole shifting theorem can be formulated and proved.
+	}
+	\def\Abstract{%
+		The pole-shifting theorem is one of the basic results of the theory of linear dynamic systems with linear feedback. It claims that in case of controllable systems one can achieve an arbitrary asymptotic behaviour by a suitably chosen feedback. This thesis aims to compile all knowledge needed to fully understand the theorem in one place, in a way comprehensive to undergraduate students. 
+		I do this by frist defining first order dynamical linear systems with constant coefficients with control and defining controllability and stability of such a system. By looking at the stability of the system I demonstrate that characteristic polynomials of the coefficient matrix representing the system is a valuable indicator of the system's behaviour. Then I show that the definition of controllability motivated by discrete-time systems also holds for continuous-time systems. Using these notions, the pole-shifting theorem can be formulated and proved.
 	}
 	\def\AbstractSk{%
 
