--- a/preface.tex
+++ b/preface.tex
@@ -1,14 +1,14 @@
 \chapter*{Introduction}
 \addcontentsline{toc}{chapter}{Introduction}
 
-The pole shifting theorem is one of the basic results of the theory of linear dynamic systems with linear feedback. It claims that in case of controllable systems one can achieve an arbitrary asymptotic behaviour by a suitably chosen feedback. To understand this crucial theorem, we must first describe a few basic concepts. 
+The pole shifting theorem is one of the basic results of the theory of linear dynamic systems with linear feedback. It claims that in case of controllable systems one can achieve an arbitrary asymptotic behaviour by a suitably chosen feedback. This thesis aims to compile all knowledge needed to fully understand the theorem in one place, in a way comprehensive to undergraduate students. To understand this crucial theorem, we must first describe a few basic concepts. 
 
-We start by defining first order continuous linear dynamical systems with constant coefficients and define an apparatus for solving such systems, that is, the matrix exponential. After that, we define what does it mean for such a system to be stable. Utilizing the matrix exponential, we derive a criterion for the stability expressed using the eigenvalues of the fundamental matrix of the system. This result motivates us to look at the characteristic polynomials of the fundamental matrices representing such systems. 
+We start by defining first order continuous linear dynamical systems with constant coefficients and define an apparatus for solving such systems, that is, the matrix exponential. After that, we define what does it mean for such a system to be stable. Utilizing the matrix exponential, we derive a criterion for the stability expressed using the eigenvalues of the coefficient matrix of the system. This result motivates us to look at the characteristic polynomials of the matrices of coefficients representing such systems. 
 
 Next, we introduce an open-loop and a closed-loop linear control to dynamical systems and extend the definition of stability onto them. It is also shown that the closed-loop linear control system, where the control is defined by a feedback matrix, are essentially linear autonomous systems. 
 
 The next step is to establish discrete-time systems as special case of the continuous-time systems. Then, we derive the notion of controllability for this type of systems. The subsection \ref{subsec:ct-system} is dedicated to showing that the definition of controllability motivated by discrete-time systems also holds for continuous-time systems.
 
-In the subsection \ref{subsec:decomp} we show that the characteristic polynomial of the fundamental matrix of the system can be uniquely split into its controllable and uncontrollable parts. 
+In the subsection \ref{subsec:decomp} we show that the characteristic polynomial of the coefficient matrix of the system can be uniquely split into its controllable and uncontrollable parts. 
 
-Finally, in the second chapter we formulate the pole-shifting theorem. It claims, that by a suitable choice of the feedback matrix, in the closed-loop systems, we can set the controllable part of the characteristic monic polynomial of the fundamental matrix representing the system arbitrarily as long as we maintain its degree (depending on the level of controllability of the system). Thus, we obtain a powerful tool for determining the asymptotic behaviour of the system.
+Finally, in the second chapter we formulate the pole shifting theorem. It claims, that by a suitable choice of the feedback matrix, in the closed-loop systems, we can set the controllable part of the characteristic monic polynomial of the coefficient matrix representing the system arbitrarily as long as we maintain its degree (depending on the level of controllability of the system). Thus, we obtain a powerful tool for determining the asymptotic behaviour of the system.
