--- a/preface.tex
+++ b/preface.tex
@@ -7,8 +7,8 @@ We start by defining first order continuous linear dynamical systems with consta
 
 Next, we introduce an open-loop and a closed-loop linear control to dynamical systems and extend the definition of stability onto them. It is also shown that the closed-loop linear control system, where the control is defined by a feedback matrix, are essentially linear autonomous systems. 
 
-The next step is to establish discrete-time systems as special case of the continuous-time systems. Then, we derive the notion of controllability for this type of systems. The subsection \ref{subsec:ct-system} is dedicated to showing that the definition of controllability motivated by discrete-time systems also holds for continuous-time systems.
+The next step is to establish discrete-time systems as special case of the continuous-time systems. Then, we derive the notion of controllability for this type of systems. The section \ref{sec:ct-system} is dedicated to showing that the definition of controllability motivated by discrete-time systems also holds for continuous-time systems.
 
-In the subsection \ref{subsec:decomp} we show that the characteristic polynomial of the coefficient matrix of the system can be uniquely split into its controllable and uncontrollable parts. 
+In the section \ref{sec:decomp} we show that the characteristic polynomial of the coefficient matrix of the system can be uniquely split into its controllable and uncontrollable parts. 
 
-Finally, in the second chapter we formulate the pole shifting theorem. It claims, that by a suitable choice of the feedback matrix, in the closed-loop systems, we can set the controllable part of the characteristic monic polynomial of the coefficient matrix representing the system arbitrarily as long as we maintain its degree (depending on the level of controllability of the system). Thus, we obtain a powerful tool for determining the asymptotic behaviour of the system.
+Finally, in the third chapter we formulate the pole shifting theorem. It claims, that by a suitable choice of the feedback matrix, in the closed-loop systems, we can set the controllable part of the characteristic monic polynomial of the coefficient matrix representing the system arbitrarily as long as we maintain its degree (depending on the level of controllability of the system). Thus, we obtain a powerful tool for determining the asymptotic behaviour of the system.
